# snip

./: .gitignore  README.md  pyproject.toml  report.html  report_web.html
snip/: cli.py  db.py  models.py  repository.py
snip/web/: app.py
snip/web/static/: app.js  index.html  style.css
tests/: test_cli.py  test_db.py  test_repository.py
