[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snip"
version = "1.0.0"
description = "A developer code snippet manager for the terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["cli", "snippets", "developer-tools", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pygments>=2.15.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
snip = "snip.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["snip*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=snip --cov-report=term-missing"

[tool.coverage.run]
source = ["snip"]
omit = ["tests/*"]
